# mqtt-websocket-proxy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  app.js  ecosystem.config.js  mqtt-protocol.js  package.json
client/: CMakeLists.txt  REFACTORING_SUMMARY.md  ws_audio_utils.c  ws_audio_utils.h  ws_handle_msg.c  ws_parse_msg.c  ws_parse_msg.h  ws_send_msg.c  ws_send_msg.h  wsmate.c  wsmate_review.md
client/ao/: ao.h
client/cjson/: CMakeLists.txt
client/libs/: libao.def  libao.lib  libao_x64.exp  libmpg123-0.exp  libmpg123-0.lib  libout123-0.exp  libout123-0.lib  libsyn123-0.exp  libsyn123-0.lib
client/scripts/: generate_lib.bat  generate_lib.ps1
config/: gateway.json.example  mqtt.json.example
docs/: libwebsocket_compile.md  wsclient_dev.md
src/: main.cpp
src/common/: constants.h  error_codes.h  types.h
src/connection/: mqtt_connection.cpp  mqtt_connection.h  websocket_bridge.cpp  websocket_bridge.h
src/protocol/: mqtt_packet.cpp  mqtt_packet.h  mqtt_protocol.cpp  mqtt_protocol.h
src/server/: gateway_server.cpp  gateway_server.h  mqtt_server.cpp  mqtt_server.h  udp_server.cpp  udp_server.h
src/utils/: config_manager.cpp  config_manager.h  crypto_utils.cpp  crypto_utils.h  crypto_utils_openssl.cpp  logger.cpp  logger.h  mcp_proxy.cpp  mcp_proxy.h  mqtt_auth.cpp  mqtt_auth.h
tests/: CMakeLists.txt  integration_test.cpp  test_audio_packet_format.cpp  test_basic.cpp  test_complete_gateway.cpp  test_config_hot_reload.cpp  test_encryption.cpp  test_js_compatibility.cpp  test_mcp_proxy.cpp  test_mqtt_auth.cpp  test_mqtt_protocol.cpp  test_tcp_server.cpp  test_udp_server.cpp  test_websocket_message_protection.cpp  test_websocket_reconnection.cpp
tools/: analyze_opus_packets.py  check_opus_duration.py  create_40ms_opus.py  fixed_opus_extractor.py
